[tool.poetry]
name = "airqo_etl_utils"
version = "1.0.0"
description = "AirQo Airflow custom python package"
authors = ["AirQo <data@airqo.net>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "airflow", "AirQo"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.9.3"
apache-airflow-providers-slack = "^8.7.1"
confluent_avro = "^1.8.0"
google-cloud-bigquery = "^3.25.0"
google-cloud-storage = "^2.18.0"
pandas = "2.1.0"
requests = "2.31.0"
python-dotenv = "1.0.0"
numpy = "1.25.2"
pyarrow = "^17.0.0"
kafka-python = "^2.0.2"
simplejson = "3.19.1"
sentry-sdk = "^2.11.0"
geopy = "^2.4.1"
mlflow = "^2.14.3"
lightgbm = "4.1.0"
setuptools = "68.2.2"
urllib3 = "1.26.16"
gcsfs = "2023.9.2"
joblib = "1.3.1"
scikit-learn = "1.2.2"
pymongo = "4.5.0"
optuna = "^3.6.1"
scipy = "1.11.1"
firebase-admin = "^6.5.0"
db-dtypes = "^1.2.0"
tweepy = "^4.14.0"
airflow-provider-great-expectations = "0.2.8"

[tool.poetry.dev-dependencies]
coverage = "^7.6.0"
pytest = "7.4.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
    'E203',  # Whitespace before ':'
    'W503',  # Line break before binary operator
]
exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
    '.venv',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
include = [{ include = "*.json" }]
