[tool.poetry]
name = "airqo_etl_utils"
version = "1.0.0"
description = "AirQo Airflow custom python package"
authors = ["AirQo <data@airqo.net>"]
license = "MIT"
keywords = ["python", "airflow", "AirQo"]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "*"
apache-airflow-providers-slack = "*"
confluent_avro = "*"
google-cloud-bigquery = "*"
google-cloud-storage = "*"
pandas = "2.1.0"
requests = "2.31.0"
python-dotenv = "1.0.0"
numpy = "1.25.2"
pyarrow = "*"
kafka-python = "*"
simplejson = "3.19.1"
sentry-sdk = "*"
geopy = "*"
mlflow = "*"
lightgbm = "4.1.0"
setuptools = "68.2.2"
urllib3 = "1.26.16"
gcsfs = "2023.9.2"
joblib = "1.3.1"
scikit-learn = "1.2.2"
pymongo = "4.5.0"
optuna = "*"
scipy = "1.11.1"
firebase-admin = "*"
db-dtypes = "*"
tweepy = "*"
airflow-provider-great-expectations = "0.2.8"

[tool.poetry.dev-dependencies]
coverage = "*"
pytest = "7.4.0"
pytest-cov = "*"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
    'E203',  # Whitespace before ':'
    'W503',  # Line break before binary operator
]
exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
    '.venv',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

include = ["**/*.json"]