[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airqo_etl_utils"
version = "1.0.0"
dependencies = [
        "pandas",
        "requests",
        "simplejson",
        "kafka-python",
        "numpy",
        "pyarrow",
        "python-dotenv",
        "google-cloud-bigquery",
        "google-cloud-bigquery[pandas]",
        "google-cloud-storage",
        "firebase-admin",
        "apache-airflow-providers-http",
        "apache-airflow-providers-slack",
        "apache-airflow-providers-google",
        "apache-airflow[sentry]",
        "lightgbm~=4.1.0",
        "mlflow",
        "gcsfs~=2023.9.2",
        "pymongo~=4.5.0",
        "optuna",
        "tweepy",
        "scikit-learn==1.2.2",
        "firebase-admin",
        "db_dtypes",
        "tweepy",
]
requires-python = ">=3.10"
maintainers = [
  {name = "AirQo", email = "data@airqo.net"},
]
description = "AirQo Airflow custom python package"
license = "MIT"
keywords = ["airflow"]
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://airqo.net"
Repository = "https://github.com/airqo-platform/AirQo-api.git"

[tool.hatch.build.targets.wheel]
packages = ["."]